--- a/版本整理摘要.md
+++ b/版本整理摘要.md
@@ -7,24 +7,24 @@ tags: C# , Language
 ### 版本整理圖表
 
 
-| C#版本           | 釋出時間   | .NET 版本            | VS版本        | CLR版本 |
-|:---------------- | ---------- | -------------------- | ------------- | ------- |
-| C#1.0            | 2002-02-13 | .NET Framework 1.0   | VS.NET 2002   | 1       |
-| C#1.1 C#1.2      | 2003-04-24 | .NET Framework 1.1   | VS.NET 2003   | 1.1     |
-| C#2.0 C#3.0      | 2005-11-07 | .NET Framework 2.0   | VS2005        | 2       |
-| C#3.0            | 2006-11    | .NET Framework 3.0   | VS2008        | 2       |
-| C#3.0 (導入LinQ) | 2007-11-19 | .NET Framework 3.5   | VS2008        | 2       |
-| C#4.0            | 2010-4-12  | .NET Framework 4.0   | VS2010        | 4       |
-| C#5.0            | 2012-02-20 | .NET Framework 4.5   | VS2012        | 4       |
-| C#5.0            | 2013-10-17 | .NET Framework 4.5.1 | VS2013        | 4       |
-| C#5.0            | 2014-05-05 | .NET Framework 4.5.2 | VS2013        | 4       |
-| C#6.0            | 2015-07-26 | .NET Framework 4.6   | VS2015(v14)   | 4       |
-| C#6.0            | 2015-11-30 | .NET Framework 4.6.1 | VS2015(v14)   | 4       |
-| C#7.0            | 2016-08-02 | .NET Framework 4.6.2 | VS2017(v15)   | 4       |
-| C#7.1            | 2017-04-05 | .NET Framework 4.7   | VS2017(v15.3) | 4       |
-| C#7.2            | 2017-10-17 | .NET Framework 4.7.1 | VS2017(v15.5) | 4       |
-| C#7.3            | 2018-04-30 | .NET Framework 4.7.2 | VS2017(v15.7) | 4       |
-| C#8.0            | 2019-04-18 | .NET Framework 4.8   | VS2019(v16)   | 4       |
+| C#版本           | 釋出時間   | .NET 版本                                | VS版本        | CLR版本 |
+|:---------------- | ---------- | ---------------------------------------- | ------------- | ------- |
+| C#1.0            | 2002-02-13 | .NET Framework 1.0                       | VS.NET 2002   | 1       |
+| C#1.1 C#1.2      | 2003-04-24 | .NET Framework 1.1                       | VS.NET 2003   | 1.1     |
+| C#2.0 C#3.0      | 2005-11-07 | .NET Framework 2.0                       | VS2005        | 2       |
+| C#3.0            | 2006-11    | .NET Framework 3.0                       | VS2008        | 2       |
+| C#3.0 (導入LinQ) | 2007-11-19 | .NET Framework 3.5                       | VS2008        | 2       |
+| C#4.0            | 2010-4-12  | .NET Framework 4.0                       | VS2010        | 4       |
+| C#5.0            | 2012-02-20 | .NET Framework 4.5                       | VS2012        | 4       |
+| C#5.0            | 2013-10-17 | .NET Framework 4.5.1                     | VS2013        | 4       |
+| C#5.0            | 2014-05-05 | .NET Framework 4.5.2                     | VS2013        | 4       |
+| C#6.0            | 2015-07-26 | .NET Framework 4.6                       | VS2015(v14)   | 4       |
+| C#6.0            | 2015-11-30 | .NET Framework 4.6.1                     | VS2015(v14)   | 4       |
+| C#7.0            | 2016-08-02 | .NET Framework 4.6.2                     | VS2017(v15)   | 4       |
+| C#7.1            | 2017-04-05 | .NET Framework 4.7                       | VS2017(v15.3) | 4       |
+| C#7.2            | 2017-10-17 | .NET Framework 4.7.1                     | VS2017(v15.5) | 4       |
+| C#7.3            | 2018-04-30 | .NET Framework 4.7.2 (對應 .Net Core 2.X) | VS2017(v15.7) | 4       |
+| C#8.0            | 2019-04-18 | .NET Framework 4.8  (對應 .Net Core 3.X) | VS2019(v16)   | 4       |
 
 
 ### [C# 1.0 版](https://docs.microsoft.com/zh-tw/dotnet/csharp/whats-new/csharp-version-history#c-version-10)
