修改 local method 敘述

--- a/版本整理摘要.md
+++ b/版本整理摘要.md
@@ -477,7 +477,7 @@ tags: C# , Language
 - [Local Functions](https://docs.microsoft.com/zh-tw/dotnet/csharp/whats-new/csharp-7#local-functions)
     - 支援在方法、屬性或是建構式中 , 宣告以及實作別的方法.
     -   [local functions](https://dotblogs.com.tw/billchung/2020/01/02/024959)
-        1. 依照方法內部是否有使用到物件成員 , 來決定 local 方法會被建立成實體方法還是靜態方法 (此物件成員若是透過local方法的參數傳入 , 則還是會宣告成靜態方法)
+        1. 依照方法內部是否有使用到物件成員 , 來決定 local 方法會被編譯成實體方法還是靜態方法 (此物件成員若是透過local方法的參數傳入 , 則還是會編譯成靜態方法)
         2. 若local方法內部使用到暫存變數(未透過local方法傳入) , 則 local 方法會自動長一個 struct 參數(將使用到的暫存變數裝入).
     -   ```C#
         static string OutputDayString(string freq = "weekend")
