last changed at Jun 28, 2022 3:04 PM, pushed by Ci Ty Chen
新增表格

--- a/版本整理摘要.md
+++ b/版本整理摘要.md
@@ -197,6 +197,14 @@ tags: C# , Language
         - await 並不一定會新增一個 thread . 此依據被呼叫方法內部的實作是否有新增一個 thread 去執行.
         
 - [Caller Information](https://docs.microsoft.com/zh-tw/dotnet/csharp/programming-guide/concepts/caller-information)
+
+    -   | 屬性                              | 描述                                                          | 類型    |
+        | --------------------------------- | ------------------------------------------------------------- |:------- |
+        | CallerFilePathAttribute           | 包含呼叫端的原始程式檔完整路徑。 完整路徑是在編譯時期的路徑。 | String  |
+        | CallerLineNumberAttribute         | 原始程式檔中呼叫方法的行號。                                  | Integer |
+        | CallerMemberNameAttribute         | 呼叫端的方法名稱或屬性名稱。                                  | String  |
+        | CallerArgumentExpressionAttribute | 引數運算式的字串表示。                                        | String  |
+
     - >使用 Caller Info 屬性，您就可以取得有關方法之呼叫端的資訊。 您可以取得原始程式碼的**檔案路徑**、**原始程式碼中的行號**，以及**呼叫端的成員名稱**
     -   ```C#
         public abstract class NotifyPropertyBase : INotifyPropertyChanged
@@ -637,6 +645,22 @@ tags: C# , Language
 - [泛型約束](https://docs.microsoft.com/zh-tw/dotnet/csharp/language-reference/keywords/where-generic-type-constraint)
     - >允許 Enum、Delegate 和 MulticastDelegate 作為基底類別條件約束
 - 將 attributes 附加至自動實作屬性的支援欄位
+
+### [C# 8.0](https://docs.microsoft.com/zh-tw/dotnet/csharp/whats-new/csharp-8)
+- 需要再對文件
+- using scope C# 8.0
+- 靜態區域函式 C# 8.0
+- 可為 null 的參考型別 C# 8.0
+- interface default method C# 8.0
+- 非同步迭代 C# 8.0
+- Index & Range C# 8.0
+- ★switch expression C# 8.0
+- recursive pattern matching C# 8.0
+- tuple pattern matching C# 8.0
+- position pattern matching C# 8.0
+- ★property pattern matching C# 8.0
+- 使用 {} C# 8.0
+
 ### Thank you! 
 
 You can find me on
